--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ nbproject/private/private.xml
 nbproject/genfiles.properties
 nbproject/build-impl.xml
 nbproject/project.properties
+dist/README.TXT
